apply plugin: 'java'
apply plugin: 'idea'
apply from: 'javafx.plugin'

sourceCompatibility = 1.8
version = '1.0'

repositories {
    mavenCentral()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.11'
    compile 'org.jfxtras:jfxtras-labs:2.2-r4'
}

group = 'com.emccode.vstriker'
version = '1.0.0'

idea.module.iml {
    beforeMerged { module ->
        module.dependencies.clear()
    }
}

idea.module.iml {
    whenMerged { module ->
        module.dependencies*.exported = true
    }
}


javafx {

    profiles {
        // not every possible platform override, but ones that have a known impact
        windows {
            id = 'c533f663-1efd-489f-b910-4c7ec20c7fd0'
            category = 'JavaFX Demos'
            javaRuntime = 'C:/Program Files (x86)/Java/jdk1.8.0_20'

            bundleArguments = [
                    // for EXE and MSI bundles
                    'win.menuGroup' : 'EMC Code VStriker',	 //If menuHint is set, then this is the menu group to install the application into.

                    // fir MSI bundles, they have stricter version numbering rules
                    'win.msi.productVersion' : '8.1.2'
            ]
        }

        macosx {
            category = 'public.app-category.developer-tools'
            javaRuntime = '/Library/Java/JavaVirtualMachines/jdk1.8.0_20.jdk/'

            bundleArguments = [
                    // for mac apps
                    'mac.category' : 'public.app-category.developer-tools',
                    'mac.CFBundleIdentifier' : 'com.shemnon.gradle-plugin.FullyExpressed',
                    'mac.CFBundleName' : 'EMC Code VStriker',
                    'mac.signing-key-user-name' : 'Magdy Salem',
                    'mac.bundle-id-signing-prefix' : 'com.emccode.vstriker',

                    // for Mac App Store Ready bundles
                    'mac.app-store-entitlements' : 'src/deploy/package/emccode',

            ]
        }

        linux {
            // linux doesn't care about id, it goes un-used at the moment
            category = 'Development'
            // good luck finding a standard location for the JDK
            //javaRuntime = '/usr/lib/jvm/java-7-oracle'

            bundleArguments = [
                    // for DEB bundles
                    'email' : 'support@example.com', // This is the email used for the deb maintainer field.
            ]
        }
    }

    debugKey {
        alias = 'buggyKey'
        keyPass = '123456'
        keyStore = file('veryinsecure.jks')
        storePass = '123456'
    }
    // don't get too excited, the release key is overridden by gradle.properties
    releaseKey {
        alias = 'imaginary'
        keyPass = 'bad'
        keyStore = file('nonexistant.jks')
        storePass = 'bad'
    }
    signingMode 'release'

    appID 'VStriker'
    appName 'Fully Expressed Build File'
    mainClass 'com.emccode.vstriker.VStriker'

    jvmArgs = ['-XX:+AggressiveOpts', '-XX:CompileThreshold=1']
    systemProperties = [ 'prism.disableRegionCaching':'true' ]
    arguments = ['1AC', '1NC', '2AC', '2NC', '1NR', '1AR', '2NR', '2AR']

    embedLauncher = true // caution: class-path not set and is overwritten if set to false

    // applet and webstart stuff
    width = 600
    height = 600
    embedJNLP = false


    // deplpy/info attributes
    category = 'demo'
    copyright = 'Copyright (c) 2015, EMC CODE'
    description = '''EMC CODE VStriker'''
    licenseType = 'Apache License 2.0'
    vendor = 'EMC'

    // deploy/preferences attributes
    installSystemWide = true
    menu = true
    shortcut = true

    codebase = 'https://github.com/emccode/VStriker'



    bundleArguments {
        licenseFile = 'LICENSE' // click through license file for some bundlers
        userJvmOptions = [ '-Xmx' : '128m',  '-Xms' : '128m'] // A mechanism to allow programs to adjust JVM Options
        preferencesID = 'com.emccode.vstriker' // implementation detail for user JVM options
    }
}

compileJava {
    sourceCompatibility = 7
    targetCompatibility = 7
}

jfxDeploy {
    // verbose output of the deployment, to the info chanel
    // it leaves files in the temp dir if set to true
    verbose = false
}

generateDebugKey {
    dname='ou=them'
    validity=1
}

jar {
    manifest {
        attributes('-x-bogus': 'a bogus attribute',
                '-x-bogus-2': 'a second bogus attribute')
    }
}
